syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.archi.common.auth";
option java_outer_classname = "LogoutProto";

service LogoutService {
  rpc PostLogout(PostLogoutRequest) returns(PostLogoutResponse);
}

message PostLogoutRequest {
  string accessToken = 1;
}

message PostLogoutResponse {
  int64 status = 1;
  string message = 2;
}